# tooltrace

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_LOG.md  OLD_IMPLEMENTATION_LOG.md  README.md  TODO.md
.claude/: settings.local.json
paper-gen/: Cargo.toml
paper-gen/src/: apriltag_generator.rs  main.rs  marker_placement.rs  paper_sizes.rs  pdf_generator.rs
tooltrace/: Cargo.toml
tooltrace-common/: Cargo.toml
tooltrace-common/src/: lib.rs  types.rs
tooltrace/.claude/: settings.local.json
tooltrace/src/: calibration.rs  detection.rs  export_dxf.rs  export_svg.rs  main.rs  segmentation.rs  smoothing.rs  tracing.rs
